# Branchless-Multithreaded-Inverted-Indexer

./: .gitignore  CMakeLists.txt  README.md
include/: index.hpp  tokenizer.hpp
src/: main.cpp  search.cpp
